# owlgram-backend

./: .env.example  Makefile  README.md  pyproject.toml
.github/workflows/: docker.yml
deployment/: Dockerfile  docker-compose.local.yml  docker-compose.yml  entrypoint.sh
migrations/: env.py
migrations/versions/: 2024_09_15_1805-0033e07d3965.py  2024_09_15_2025-000000000000.py
owlgram/: __init__.py  app.py  version.py
owlgram/cli/: __init__.py  cli.py  run.py
owlgram/core/: config.py  security.py
owlgram/core/dependencies/: __init__.py  constructors.py  fastapi.py
owlgram/core/exceptions/: handler.py  session.py
owlgram/lib/db/: session.py
owlgram/lib/models/: __init__.py  session.py
owlgram/lib/schemas/: fields.py  session.py  validators.py
owlgram/lib/schemas/enums/: redis.py
owlgram/lib/utils/: openapi.py
owlgram/routers/v1/: ping.py  router.py  session.py
